--- a/ExpandCollapse-AngularJS/Index.html
+++ b/ExpandCollapse-AngularJS/Index.html
@@ -2,8 +2,92 @@
 <html xmlns="http://www.w3.org/1999/xhtml" ng-app="expandCollapseApp">
 <head>
     <title>Expand Collapse</title>
-</head>
-<body>
+    <link href="Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="Content/custom.css" rel="stylesheet" />
+    <script src="Scripts/jquery-1.9.1.min.js"></script>
+    <script src="Scripts/bootstrap.min.js"></script>
+    <script src="Scripts/angular.min.js"></script>
+    <script src="App/app.js"></script>
+    <script src="App/controller/customerController.js"></script>
+    <script src="App/service/customerData.js"></script>
 
+</head>
+<body ng-controller="customerController">
+    <div class="col-sm-6">
+        <div class="panel-group" id="shopping">
+            <div class="panel-primary">
+                <div class="panel-heading">
+                    <div class="panel-title">
+                        <span></span><span class="pdsa-panel-toggle" data-toggle="collapse" data-parent="#shopping"></span>
+                    </div>
+                </div>
+
+                <div class="panel-collapse collapse in" id="myCustomers">
+                    <div class="panel-body">
+                        <div class="table table-bordered table-striped">
+                            <table>
+                                <tr>
+                                    <th>Customer ID</th>
+                                    <th>Customer Name</th>
+                                </tr>
+                                <tr ng-repeat="customer in customers">
+                                    <td>{{customer.id}}</td>
+                                    <td>{{customer.name}}</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-primary">
+                <div class="panel-heading">
+                    <div class="panel-title">
+                        <span class="pdsa-panel-toggle" data-toggle="collapse" data-parent="#shopping"></span>
+                    </div>
+                </div>
+
+                <div class="panel-collapse collapse in" id="myProducts">
+                    <div class="panel-body">
+                        <div class="table table-bordered table-striped">
+                            <table>
+                                <tr>
+                                    <th>Customer ID</th>
+                                    <th>Customer Name</th>
+                                </tr>
+                                <tr ng-repeat="customer in customers">
+                                    <td>{{customer.id}}</td>
+                                    <td>{{customer.name}}</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-primary">
+                <div class="panel-heading">
+                    <div class="panel-title">
+                        <span class="pdsa-panel-toggle" data-toggle="collapse" data-parent="#shopping"></span>
+                    </div>
+                </div>
+
+                <div class="panel-collapse collapse" id="myOrders">
+                    <div class="panel-body">
+                        <div class="table table-bordered table-striped">
+                            <table>
+                                <tr>
+                                    <th>Customer ID</th>
+                                    <th>Customer Name</th>
+                                </tr>
+                                <tr ng-repeat="customer in customers">
+                                    <td>{{customer.id}}</td>
+                                    <td>{{customer.name}}</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
